syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "CasaCodigo";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

import "google/protobuf/timestamp.proto";

service CadastrarNovoAutorService {
  rpc cadastrar (CadastrarAutorRequestGrpc) returns (CadastrarAutorResponseGrpc) {}
}

service CadastrarNovaCategoriaService {
  rpc cadastrar (CadastrarCategoriaRequestGrpc) returns (CadastrarCategoriaResponseGrpc) {}
}

service CadastrarNovoLivroService {
  rpc cadastrar (CadastrarLivroRequestGrpc) returns (CadastrarLivroResponseGrpc) {}
}

message BigDecimal {
  int32 scale = 1;
  int64 valor = 2;
}

message CadastrarLivroRequestGrpc {
  string titulo = 1;
  string resumo = 2;
  string sumario = 3;
  BigDecimal preco = 4;
  int32 paginas = 5;
  string isbn = 6;
  google.protobuf.Timestamp dataPublicacao = 7;

  message Categoria{
    string categoriaId = 1;
  }

  Categoria categoria = 8;

  message Autor {
    string autorId = 1;
  }

  Autor autor = 9;
}

message CadastrarLivroResponseGrpc {
  string id = 1;
}

message CadastrarCategoriaRequestGrpc {
  string nome = 1;
}

message CadastrarCategoriaResponseGrpc {
  string id = 1;
}

message CadastrarAutorRequestGrpc {
  string email = 1;
  string nome = 2;
  string descricao = 3;
}

message CadastrarAutorResponseGrpc {
  string id = 1;
}